--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.4",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.3.0",
+    "cors": "^2.8.5",
     "mongoose": "^5.3.11",
     "nodemon": "^3.0.1",
     "passport": "^0.4.0",
