--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "npm run server"
   },
   "author": "mahmoud jouny",
   "license": "MIT",
@@ -17,10 +17,10 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "concurrently": "^4.0.1",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.3.0",
-    "cors": "^2.8.5",
     "mongoose": "^5.3.11",
     "nodemon": "^3.0.1",
     "passport": "^0.4.0",
